# pcm_coder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFMPEG.cmake  FindFFmpeg.cmake  FindPORTAUDIO.cmake  fix_sdl2_release.cmake  get-portaudio.cmake  get-sdl2.cmake
libs/: CMakeLists.txt
src/: AbastractPCMFinalStage.cpp  AbastractPCMFinalStage.h  AudioProdusser.cpp  AudioProdusser.h  BitWidthConverter.cpp  BitWidthConverter.h  CMakeLists.txt  FFmpegVideoCoderConsumer.cpp  FFmpegVideoCoderConsumer.h  FrameProxy.cpp  FrameProxy.h  IConsumer.h  LineGeneratorStage.cpp  LineGeneratorStage.h  PCMFinalStage.cpp  PCMFinalStage.h  PCMFrmageStage.cpp  PCMFrmageStage.h  PixelDuplicatorStage.cpp  PixelDuplicatorStage.h  PlayerConsumer.cpp  PlayerConsumer.h  RPIFbDisplayConsumer.cpp  RPIFbDisplayConsumer.h  SDL2DisplayConsumer.cpp  SDL2DisplayConsumer.h  SDL2DisplayConsumerBase.cpp  SDL2DisplayConsumerBase.h  Splitter.h  abstractprocessingstage.h  argparser.cpp  argparser.h  audioreader.cpp  audioreader.h  audiosample.h  constants.h  ctrlc_listener.cpp  ctrlc_listener.h  ffmpegvideocoder.cpp  ffmpegvideocoder.h  (+35 more)
